# Human-Activity-Recognition

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CNN.ipynb  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRU_RNN.ipynb  LICENSE  LSTM_RNN.ipynb  MODEL_CARD.md  README.md  SECURITY.md  pyproject.toml  requirements-reproduction.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: tests.yml
docs/: paper-reproduction.md
results/: README.md
src/har/: __init__.py  compare.py  data.py  experiment.py  models.py  train.py
tests/: test_data.py  test_models.py  test_training.py
