[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-activity-recognition"
version = "0.1.0"
description = "Paper-aligned deep-learning baselines for the UCI HAR Dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<3",
]

[project.optional-dependencies]
train = [
  "scikit-learn>=1.3,<2",
  "tensorflow>=2.15,<2.20",
]
test = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
