[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-activity-recognition"
version = "1.0.0"
description = "Reproducible CNN, LSTM, and GRU experiments for the Singla-Patel HAR paper"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Saurav Singla"},
  {name = "Anjali Patel"},
]
keywords = [
  "human activity recognition",
  "deep learning",
  "CNN",
  "LSTM",
  "GRU",
  "UCI HAR",
]
dependencies = [
  "numpy>=1.24,<3",
]

[project.optional-dependencies]
train = [
  "scikit-learn>=1.3,<2",
  "tensorflow>=2.15,<2.20",
]
test = [
  "pytest>=8,<9",
]

[project.scripts]
har-train = "har.train:main"
har-compare = "har.compare:main"

[project.urls]
Repository = "https://github.com/sauravsingla/Human-Activity-Recognition"
Paper = "https://doi.org/10.26438/ijcse/v8i11.2732"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
